pkg/lang/testdata/ub/outputs/valid/sensitive.ub
outputs: {
  password: {
    value: input.p
    @sensitive: true
  }
}
