pkg/lang/testdata/ub/outputs/invalid/bad-keys.ub
outputs: {
  ok:        { value: input.x }
  ok:        { value: input.y }
  @bad:      { value: input.z }
  'quoted':  { value: input.q }
}
